--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ body {
 }
 .bodycontainer {
   margin: 0 5vw;
-  border: 2px solid #0e252e3a;
-  height: 300vh;
+  border: 2px solid #24c1ff3a;
+  /* height: 300vh; */
 }
 
 /* hero section  */
@@ -92,7 +92,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   border-left: 10px solid rgb(83, 226, 118);
   border-right: 10px solid rgb(83, 226, 118);
 }
@@ -164,4 +163,83 @@ body {
 .shadow__btn:hover {
   box-shadow: 0 0 5px rgb(116, 218, 125), 0 0 25px rgb(85, 226, 92),
     0 0 50px rgb(85, 145, 45), 0 0 100px rgb(21, 255, 0);
+}
+
+/* second part of the page  */
+
+.second-part-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-left: 10px solid rgb(194, 181, 162);
+  border-right: 10px solid rgb(194, 181, 162);
+  /* border: 2px solid red; */
+  height: 100vh;
+}
+.image-container {
+  width: 100%;
+  height: 70vh;
+  /* border: 2px solid blue; */
+  display: flex;
+  position: relative;
+  justify-content: right;
+  z-index: -100;
+  top: -20%;
+}
+.image-container img {
+  width: auto;
+  margin-right: 5%;
+}
+.card-container {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  /* border: 2px solid rgb(255, 234, 0); */
+  z-index: 1;
+  /* left: 150px; */
+}
+
+.card-rookie,
+.card-middleman,
+.card-pro {
+  width: 100%;
+  height: 100%;
+  /* border: 2px solid red; */
+  display: flex;
+  color: white;
+  text-align: center;
+  margin: 0 1.5%;
+  font-size: 0.8rem;
+  flex-direction: column;
+
+  background: linear-gradient(to right, #1f403754, #99f2c813);
+  border: 2px solid rgba(255, 255, 255, 0.223);
+  border-radius: 5px;
+  box-shadow: rgba(50, 93, 59, 0.752) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+.card-features-list li {
+  list-style: none;
+  font-size: 14px;
+  margin-top: 5%;
+}
+.feature-text {
+  font-size: 16px;
+  color: rgb(83, 226, 118);
+  margin-top: 80%;
+}
+
+.card-info p {
+  font-size: 16px;
+  margin-bottom: 10%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.card-dollar {
+  font-size: 70px;
 }
