--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@
   align-items: center;
   width: 100%;
   position: fixed;
+  z-index: 9999;
 }
 
 .navbar ul li:hover {
@@ -242,4 +243,7 @@ body {
 
 .card-dollar {
   font-size: 70px;
+}
+.card-title{
+  text-shadow:0 0 25px rgba(0, 255, 13, 0.719); 
 }
